# BMPT-Magnus

./: .gitignore  AGENTS.md  LICENSE  README.md  interface.md  main.py  opencode_swap.txt  pyproject.toml  requirements.common.txt  requirements.deepspeed.txt  requirements.torch.txt  requirements.txt
agents/: README.md  ai_quickstart.md  config.schema.json  step_contract.md  task_recipes.md
apptainer/: deepspeed.def  deepspeed.local.def  deepspeed.magnus.def  torch.def  torch.local.def
configs/: deepspeed_zero2.json
data/: README.md  data.jsonl  download_verifybench.py  prepare_verifybench_sft.py
data/processed/: train.jsonl  val.jsonl
docs/: apptainer.md  cli.md  composer_manager.md  config.md  config_manager.md  guide.md  index.md  interface.md  manager.md  model_loader.md  source_loader.md  tokenize.md  tokenizer_loader.md  toolbox.md  train_utils.md  worker_manager.md
example/: example_engine_loop.py  example_weighted_step.py
example/Qwen-2.5-7B-sft-full/: config.yaml  deepspeed_zero2.json  def_train.py
example/Qwen35_sft_fullparam/: config.yaml  def_train.py
example/Qwen_sft/: config.yaml  def_train.py
example/qwen-sft/: README.md  config.yaml  (+2 more)
examples/: example_engine_loop.py  example_weighted_step.py
train/: algo.md  config.example.rlaif.yaml  config.yaml  config_pbv.yaml  deepspeed.zero2.json  deepspeed_zero2.json  def_train.py  default_components.py  general_dataloader.py  guide.md  pbv.py  pbv_common.py  pbv_models.py  pbv_sampling.py  pbv_step.py  pbv_verifier.py  qwen_components.py  run_train.py
util/: templates.py  train_utils.py
(+57 files in other folders)
