[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmpt"
version = "0.1.0"
description = "Brisk Module for Post-Training"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "pyyaml>=6.0",
  "accelerate==0.34.2",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
torch = [
  "transformers==4.45.2",
  "peft==0.13.2",
  "sentencepiece==0.2.0",
]
deepspeed = [
  "deepspeed==0.14.5",
]

[project.scripts]
bmpt-train = "bmpt.cli.train:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bmpt*"]

[tool.setuptools.package-data]
bmpt = [
  "algorithms/*.yaml",
  "algorithms/*.json",
]
